...
  // Product Details
  productDetailsScreen: 'product-details-screen',
  productImage: 'product-image',
  productName: 'product-name',
  productPrice: 'product-price',
  reserveButton: 'reserve-button',
  favoriteButton: 'favorite-button',
  addToCartButton: 'add-to-cart-button',
  increaseQuantityButton: 'increase-quantity-button',
  decreaseQuantityButton: 'decrease-quantity-button',
  quantityValue: 'quantity-value',

  // Cart
...
