...
                  <router-link
                    to="/admin/users"
                    class="mobile-nav-link"
                    @click="closeMobileMenu"
                  >
                    <Users class="h-4 w-4" />
                    <span>Gestion Utilisateurs</span>
                  </router-link>
                  <router-link
                    to="/admin/categories"
                    class="mobile-nav-link"
                    @click="closeMobileMenu"
                  >
...
